# xxybacktest

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LIVE_INTEGRATION_PLAN.md  LIVE_TECH_SPEC.md  LIVE_TODO.md  Procfile  README.md  data_renew.py  demo.md  fly.toml  pyproject.toml  requirements.txt  run_simulation.py  sim_trader.py  wsgi.py  因子分析系统-建设方案.md  实盘.py  实盘评估报告.md
.claude/: settings.json
data/: tables_config.json
docs/: 使用指南.md  碎股处理机制.md
scripts/: check_qmt_login.py  cleanup_live_residual.py  create_demo_data.py  download_data.py  download_mootdx.py  download_news_stocks.py  download_real_data.py  download_tencent.py  factor_decay_probe.py  factor_probe.py  fast_download.py  init_factors_demo.py  news_sentiment_pipeline.py  quick_analysis.py  register_demo_strategy.py  register_live_demo.py  run_sentiment_analysis.py  tdx_to_xxydb.py  test_data_providers.py  test_get_price.py  test_qmt_login_guard.py
strategy/: examples.py  factor_tutorial.py  live_strategies.py  test.ipynb
tests/: live_demo_p9.py  phase_2_my_strategy.py  test_a1_context.py  test_a2_position.py  test_a3_order.py  test_a4_cost_slippage.py  test_agent_alphalens_bridge.py  test_agent_factor_mining.py  test_agent_news_sentiment.py  test_b1_trade_calendar.py  test_b2_daily_info.py  test_b3_get_price.py  test_b4_dividend.py  test_b5_get_index_daily.py  test_buy_maotai.py  test_c0_rules.py  test_c2_rule_limit.py  test_c4_rule_volume_num.py  test_c5_rule_100.py  test_c6_rule_cost.py  test_c8_rule_volume_ratio.py  test_c9_rule_delist.py  test_d1_order_buy.py  test_d2_order_sell.py  (+38 more)
(+94 files in other folders)
